5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1709_3068.log
== TEST (2019-05-02 11:02:55) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
if v1 and v2 in range(0,11):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:28) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
d = -1
if v1>0 and v1<=0 and v2>0 and v2<=0:
	d = 2*(v1+v2) + 2*d if n == "CIMITARRA" else d
	d = 2*(v1+v2) + d if n == "KATANA" else d
	d = v1+v2 + 2*d if n == "SABRE" else d
if d == -1:
	print("Entrada invalida")
else:
	print(d)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:09:05) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
d = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	d = 2*(v1+v2) + 2*d if n == "CIMITARRA" else d
	d = 2*(v1+v2) + d if n == "KATANA" else d
	d = v1+v2 + 2*d if n == "SABRE" else d
if d == -1:
	print("Entrada invalida")
else:
	print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:09:37) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
d = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	d = 2*(v1+v2) + 2*d if n == "CIMITARRA" else d
	d = 2*(v1+v2) + d if n == "KATANA" else d
	d = v1+v2 + 2*d if n == "SABRE" else d
if d == -1:
	print("Entrada invalida")
else:
	print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:26) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())

if v1>0 and v1<=10 and v2>0 and v2<=10:
	d = 2*(v1+v2) + 2*d if n == "CIMITARRA" else d
	d = 2*(v1+v2) + d if n == "KATANA" else d
	d = v1+v2 + 2*d if n == "SABRE" else d
if d == -1:
	print("Entrada invalida")
else:
	print(d)
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:01) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
d = 0
if v1>0 and v1<=10 and v2>0 and v2<=10:
	d = 2*(v1+v2) + 2*d if n == "CIMITARRA" else d
	d = 2*(v1+v2) + d if n == "KATANA" else d
	d = v1+v2 + 2*d if n == "SABRE" else d
if d == 0:
	print("Entrada invalida")
else:
	print(d)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:08) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
d = 0
if v1>0 and v1<=10 and v2>0 and v2<=10:
	d = 2*(v1+v2) + 2*d if n == "CIMITARRA" else d
	d = 2*(v1+v2) + d if n == "KATANA" else d
	d = v1+v2 + 2*d if n == "SABRE" else d
if d == 0:
	print("Entrada invalida")
else:
	print(d)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:46) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = 0
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d == 0:
	print("Entrada invalida")
else:
	print(V)
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:11:58) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = 0
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d == 0:
	print("Entrada invalida")
else:
	print(V)
-- EXECUTION TIME:
0.219966
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20.0
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:12:26) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d > 0
	print("Entrada invalida")
else:
	print(V)
-- EXECUTION TIME:
0.213523
-- ERROR:
  File "/home/codebench/codes/1709/3068/main.py", line 10
    if d > 0
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:27) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d > 0
	print("Entrada invalida")
else:
	print(V)
-- ERROR:
File "XXXX", line 10
    if d > 0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:12:35) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d > 0:
	print("Entrada invalida")
else:
	print(V)
-- EXECUTION TIME:
0.166522
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:37) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d > 0:
	print("Entrada invalida")
else:
	print(V)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:13:03) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if d < 0:
	print("Entrada invalida")
else:
	print(V)
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:13:10) 
-- CODE:
n = input()
d = float(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if V < 0:
	print("Entrada invalida")
else:
	print(V)
-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:13:29) 
-- CODE:
n = input()
d = int(input())
v1 = int(input())
v2 = int(input())
V = -1
if v1>0 and v1<=10 and v2>0 and v2<=10:
	V = 2*(v1+v2) + 2*d if n == "CIMITARRA" else V
	V = 2*(v1+v2) + d if n == "KATANA" else V
	V = v1+v2 + 2*d if n == "SABRE" else V
if V < 0:
	print("Entrada invalida")
else:
	print(V)
-- EXECUTION TIME:
0.130456
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
